--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -8,6 +8,8 @@
   background-color: $color-white;
   border-radius: 3px;
   padding: 21px 18px;
+  font-size: 0;
+  line-height: 0;
   cursor: pointer;
 
   @include screen('sm') {
