--- a/app/blocks/dialog/dialog.scss
+++ b/app/blocks/dialog/dialog.scss
@@ -55,9 +55,12 @@
       margin-top: -12px;
     }
 
-    &_sp:not(:first-child) {
-      margin-top: -4px;
-      margin-bottom: 4px;
+    &_mg {
+
+      &:not(:first-child) {
+        margin-top: -4px;
+        margin-bottom: 39px;
+      }
     }
 
     &::before {
