--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -139,12 +139,14 @@ $color-button-radio-border: #c5c9ca;
 $color-disabled-tabs: #d6dce2;
 $color-gray-light-2: #e6eaf0;
 $color-border-gray: #444c59;
+$color-border-st-button: #656b77;
 $color-scrollbar-bg: #f4f4f4;
 $color-yellow-light: #fff7c8;
 $color-inver-text-bg: #1b262d;
 $color-peach: #d67659;
 $color-confirm: #249d79;
 $color-green-check: #75cda5;
+$color-state-light: #87919d;
 
 // ##########
 // Transitions
