--- a/app/blocks/state/state.scss
+++ b/app/blocks/state/state.scss
@@ -10,6 +10,10 @@
   padding-left: 16px;
   padding-right: 0;
 
+  @include screen('sm') {
+    @include text12;
+  }
+
   &::before {
     @include pseudo;
 
@@ -24,6 +28,64 @@
     @include screen('sm') {
       width: 7px;
       height: 7px;
+    }
+  }
+
+  b {
+    font-weight: 700;
+
+    @include screen('sm') {
+      font-weight: 400;
+    }
+  }
+
+  &_check {
+    &::before {
+      width: 14px;
+      height: 12px;
+      border-radius: 0;
+      background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 15.12 13.88' fill='%2375cda5'%3E%3Cpath d='M5.17, 13.88.31, 8.4A1.2, 1.2, 0, 0, 1, .56, 6.58a1.58, 1.58, 0, 0, 1, 2.05.21L5.07, 9.57l7.41-9a1.57, 1.57, 0, 0, 1, 2-.29, 1.21, 1.21, 0, 0, 1, .32, 1.82L5.17, 13.88Z'/%3E%3C/svg%3E");
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-color: transparent;
+
+      @include screen('sm') {
+        width: 10px;
+        height: 8px;
+      }
+    }
+  }
+
+  &_dcheck {
+    padding-left: 21px;
+
+    &::before,&::after {
+      width: 14px;
+      height: 12px;
+      border-radius: 0;
+      background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 15.12 13.88' fill='%2375cda5'%3E%3Cpath d='M5.17, 13.88.31, 8.4A1.2, 1.2, 0, 0, 1, .56, 6.58a1.58, 1.58, 0, 0, 1, 2.05.21L5.07, 9.57l7.41-9a1.57, 1.57, 0, 0, 1, 2-.29, 1.21, 1.21, 0, 0, 1, .32, 1.82L5.17, 13.88Z'/%3E%3C/svg%3E");
+      background-position: 50% 50%;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-color: transparent;
+
+      @include screen('sm') {
+        width: 10px;
+        height: 8px;
+      }
+    }
+
+    &::after {
+      @include pseudo;
+
+      top: 50%;
+      left: 7px;
+      transform: translate3d(0, -50%, 0);
+
+      @include screen('sm') {
+        left: 5px;
+      }
     }
   }
 
@@ -50,14 +112,42 @@
     padding-left: 0;
     padding-right: 20px;
 
-    &::before {
+    @include screen('sm') {
+      padding-right: 14px;
+    }
+
+    &::before,&::after {
       left: auto;
       right: 0;
+    }
+
+    &#{$b}_dcheck {
+      padding-right: 27px;
+
+      @include screen('sm') {
+        padding-right: 19px;
+      }
+
+      &::after {
+        right: 7px;
+
+        @include screen('sm') {
+          right: 5px;
+        }
+      }
     }
   }
 
   &_light {
     color: $color-basic-light;
+
+    @include screen('sm') {
+      color: $color-state-light;
+    }
+
+    b {
+      color: $color-white;
+    }
   }
 
   &_fz18 {
