--- a/app/blocks/dialog/dialog.scss
+++ b/app/blocks/dialog/dialog.scss
@@ -29,7 +29,11 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 100%;
-    padding-left: 4px;
+    padding-left: 2px;
+
+    @include screen('sm') {
+      padding-left: 0;
+    }
 
     &:not(:last-child) {
       margin-bottom: 38px;
