--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -159,6 +159,18 @@
       }
     }
 
+    &_back {
+      width: 8px;
+      height: 13px;
+      transform-origin: 50% 50%;
+
+      #{$b}_forward & {
+        left: auto;
+        right: 0;
+        transform: rotate(180deg);
+      }
+    }
+
     &_cross {
       width: 8px;
       height: 8px;
