--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -122,6 +122,7 @@ include ../blocks/time/time
 include ../blocks/timer/timer
 include ../blocks/tip/tip
 include ../blocks/toggle/toggle
+include ../blocks/toolbar/toolbar
 include ../blocks/transport-table/transport-table
 include ../blocks/transport-type/transport-type
 include ../blocks/travel-time/travel-time
