--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -147,6 +147,10 @@ $color-peach: #d67659;
 $color-confirm: #249d79;
 $color-green-check: #75cda5;
 $color-state-light: #87919d;
+$color-toolbar: #2b323c;
+$color-chat-message: #f04734;
+$color-profile-post: #86909c;
+$color-profile-name: #535965;
 
 // ##########
 // Transitions
