--- a/app/blocks/status-button/status-button.scss
+++ b/app/blocks/status-button/status-button.scss
@@ -1,7 +1,8 @@
 .status-button {
   $b: &;
 
-  display: flex;
+  position: relative;
+  display: inline-flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -9,12 +10,13 @@
   box-sizing: border-box;
   border: 1px solid $color-border-gray;
   border-radius: 3px;
-  padding: 4px 9px 14px 11px;
+  padding: 6px 9px 16px 11px;
   cursor: pointer;
   color: $color-white;
   transition: color $ease-main;
 
   @include screen('sm') {
+    padding: 5px 9px 10px;
     border-color: $color-border-st-button;
     border-radius: 2px;
   }
@@ -31,23 +33,125 @@
     width: 100%;
   }
 
+  .state {
+    line-height: 1.2;
+
+    @include screen('sm') {
+      line-height: 1.2;
+    }
+  }
+
   &__text {
     @include heading-4;
 
     line-height: 1;
     font-weight: 700;
     width: 100%;
-    margin-top: -5px;
+    margin-top: -2px;
     transition: opacity $ease-main;
 
     @include screen('sm') {
       @include text-mid;
 
       line-height: 1;
+      margin-top: 3px;
+      letter-spacing: -0.03em;
+    }
+
+    #{$b}_small & {
+      @include screen('sm') {
+        @include text15;
+
+        line-height: 1;
+      }
     }
 
     #{$b}:not(.is-disabled):hover & {
       opacity: .7;
+    }
+  }
+
+  &__icon {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+
+    @include screen('sm') {
+      width: 15px;
+      height: 15px;
+    }
+
+    &:not(:last-child) {
+      margin-right: 4px;
+    }
+  }
+
+  &__marker {
+    @include text;
+
+    display: block;
+    position: absolute;
+    right: -8px;
+    top: -9px;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    border-radius: 50%;
+    background-color: $color-chat-message;
+    color: $color-white;
+    opacity: 0;
+    transition: opacity $ease-main;
+    font-weight: 700;
+    text-align: center;
+
+    @include screen('sm') {
+      @include text-small;
+
+      right: -5px;
+      top: -6px;
+      width: 13px;
+      height: 13px;
+      line-height: 13px;
+    }
+
+    #{$b}.is-new & {
+      opacity: 1;
+    }
+  }
+
+  &_nostate {
+    padding: 16px 10px;
+
+    @include screen('sm') {
+      padding: 11px;
+    }
+
+    #{$b} {
+      &__text {
+        width: auto;
+        margin-top: 0;
+      }
+    }
+  }
+
+  &_icon {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: auto;
+    box-sizing: border-box;
+    padding: 16px 10px;
+
+    @include screen('sm') {
+      padding: 11px;
+    }
+
+    #{$b} {
+
+      &__text {
+        width: auto;
+        margin-top: 0;
+      }
     }
   }
 }
