--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -40,8 +40,11 @@ block content
         +link(href="edit-space-location.html") SpacePool -Edit Space page - location (edit-space-location.html)
         +link(href="search-result.html") SpacePool - Search result (search-result.html)
         +link(href="reservations.html") SpacePool - My reservations (reservations.html)
-        +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
         +link(href="new-space-step8.html") SpacePool - HOST My rental offers New Space Step 6 (New step Terms and Conditions) (new-space-step8.html)
+        +link(href="deal-passport.html") SpacePool - Deal Passport (deal-passport.html)
+        +link(href="deal-passport-state2.html") SpacePool - Deal Passport (deal-passport-state2.html)
+        +link(href="deal-passport-state3.html") SpacePool - Deal Passport (deal-passport-state3.html)
+        +link(href="deal-passport-state4.html") SpacePool - Deal Passport (deal-passport-state4.html)
 
       +page-title._small Попапы
       +e.list
