--- a/app/blocks/dialog/dialog.pug
+++ b/app/blocks/dialog/dialog.pug
@@ -52,7 +52,7 @@ mixin dialog3()
         +bubble('li', '15:45', "2018-10-27T15:45", true)._dark.__item Hello. Well, let me think a little...
       +e.UL.list
         +bubble('li', '15:45', "2018-10-29T15:45")._notification.__item_wide
-          +notification
+          +notification.is-new
             +notification-head('Action required:')
               +offer-info
                 +box._big._green
@@ -62,5 +62,5 @@ mixin dialog3()
               +notification-timer('Estimated time:')
             +notification-footer
               +notification-buttons
-                +button()._border._border_bg-white._short.__button Decline reservation
-                +button()._short.__button Open contract
+                +button()._border._border_bg-white._short._mob-smaller.__button Decline reservation
+                +button()._short._mob-smaller.__button Open contract
