--- a/app/blocks/message-form/message-form.scss
+++ b/app/blocks/message-form/message-form.scss
@@ -43,6 +43,12 @@
     padding: 7px 17px;
     resize: none;
     overflow: hidden;
+
+    @include screen('sm') {
+      @include text13;
+
+      letter-spacing: -.026em;
+    }
   }
 
   &__button {
@@ -69,6 +75,35 @@
 
     #{$b}__button:hover & {
       fill: $color-basic-dark;
+    }
+  }
+
+  &_chat {
+    border: none;
+    padding: 0;
+    min-height: 50px;
+
+    #{$b} {
+
+      &__wrapper {
+        border-radius: 0;
+        box-shadow: 0 2px 9px rgba(0, 0, 0, .25);
+      }
+
+      &__button {
+        border-radius: 0;
+        border: none;
+        min-width: 42px;
+        width: 42px;
+      }
+    }
+
+    .textarea {
+      border-radius: 0;
+      border: none;
+      min-height: 50px;
+      padding: 12px 17px 7px;
+      box-sizing: border-box;
     }
   }
 }
