--- a/app/blocks/notification/notification.pug
+++ b/app/blocks/notification/notification.pug
@@ -1,5 +1,6 @@
 mixin notification()
   +b.ARTICLE.notification&attributes(attributes)
+    +e.marker
     block
 
 mixin notification-head(name, title)
@@ -13,6 +14,10 @@ mixin notification-head(name, title)
 
 mixin notification-content()
   +e.SECTION.content&attributes(attributes)
+    block
+
+mixin notification-text()
+  +e.DIV.text&attributes(attributes)
     block
 
 mixin notification-footer()
@@ -30,7 +35,7 @@ mixin notification-time(start, startISO, end, endISO)
   +time(start, startISO, end, endISO).__time&attributes(attributes)
 
 mixin notification-buttons()
-    +e.buttons&attributes(attributes)
+    +e.DIV.buttons&attributes(attributes)
       block
       //- +button()._border._border_bg-white._short.__button!=data.buttons[0].name
       //- +button()._short.__button!=data.buttons[1].name
