--- a/app/blocks/timer/timer.scss
+++ b/app/blocks/timer/timer.scss
@@ -12,8 +12,19 @@
 
     font-weight: 400;
 
+    @include screen('sm') {
+      @include text12;
+
+      line-height: (20/12);
+      letter-spacing: -.02em;
+    }
+
     &:not(:last-child) {
       margin-right: 4px;
+
+      @include screen('sm') {
+        margin-right: 2px;
+      }
     }
   }
 
@@ -24,6 +35,13 @@
     display: inline-flex;
     justify-content: flex-start;
     align-items: baseline;
+
+    @include screen('sm') {
+      @include text12;
+
+      line-height: (20/12);
+      letter-spacing: -.02em;
+    }
   }
 
   &__item {
@@ -31,6 +49,10 @@
       display: inline;
       content: ':';
       margin: 0 4px;
+
+      @include screen('sm') {
+        margin: 0 2px;
+      }
     }
   }
 }
