--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -150,6 +150,7 @@ include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-cancel-request/popup-cancel-request
+include ../components/popup-chat/popup-chat
 include ../components/popup-document/popup-document
 include ../components/popup-password-change/popup-password-change
 include ../components/popup-signin/popup-signin
