--- a/app/pages/deal-passport/deal-passport-state2.pug
+++ b/app/pages/deal-passport/deal-passport-state2.pug
@@ -25,13 +25,13 @@ block content
           +toolbar.hide-from-md
             +short-profile-ext({ image: 'assets/images/ava6.jpg', name: 'Maria Bernetta', post: 'Manager'})._light(href='#').__profile
             +e.DIV.buttons
-              +status-button({name: 'Chat', icon: 'chat', marker: 3})._icon._small.__button.is-new
+              +status-button({name: 'Chat', icon: 'chat', marker: 3})._icon._small.__button.is-new.js-popup-mobile(href="#popup-chat")
           +sidebar._dark2(data-unstick-media="md")
             +space-reserv('ARTICLE', {head: {name: 'office space', color: '_green', base: '_black'}, img: 'assets/images/space16.jpg', heart: '', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}, {class: '_green'}], title: 'One Heddon Street', location: 'EC2A, London', text: 'Floor 5 Dedicated office space. Room 54'})._dark._side
               +e.informer
                 +status-button({name: 'Order summary', status: true}).__state
                   +state()._right._check._light Confirmed
-                +status-button({name: 'Contract', status: true}).__state.js-popup(href="#popup-legal-formalities")
+                +status-button({name: 'Contract', status: true}).__state.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities,md:#popup-legal-formalities-m")
                   +state()._right._orange._light Please sign
                 +status-button({name: 'Invoices', status: true}).is-disabled.__state
                   +state()._right._light N/A
@@ -48,7 +48,7 @@ block content
                     +link()._underline(href="#") Order summary confirmation
                     | &nbsp;required
                   +state()._orange._fz18.__state Please sign
-                    +link()._underline.js-popup(href="#popup-legal-formalities") the contract
+                    +link()._underline.js-popup-depends-width(href="#" data-source="xl:#popup-legal-formalities,md:#popup-legal-formalities-m") the contract
           +message-form._noborder
           +dialog2._mgt18
 block panels
@@ -58,3 +58,6 @@ block panels
 block popups
   +popup-document(getData('legal-formalities.json'))#popup-legal-formalities
     +document-legal
+  +popup-document-mobile#popup-legal-formalities-m
+    +document-legal
+  +popup-chat#popup-chat
